--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -2,13 +2,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="news" type="com.fresn.recyclerviewdatabindings.News"/>
+        <variable name="handlers" type="com.fresn.recyclerviewdatabindings.Handlers"/>
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     <TextView
-        android:layout_width="wrap_content"
+        android:text="@{news.newsHeading}"
+        android:onClick="@{() -> handlers.RecycleViewClickHandler(news)}"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="50dp"
         android:id="@+id/NewsTextHeading"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
